@@ -17,6 +17,9 @@ Upcoming Version
 [TASK]    Refactor searchresult class to reduce dependencies
 [TASK]    Replace fetch with fetchAssociative and declare property in PluginBaseHelper
 [TASK]    Avoid using f:uri viewhelper in the searchbox template because that now only works in extbase context.
+[TASK]    Add property types
+[TASK]    Migrate outdated fetch() calls in query builder usages
+[TASK]    Cleanup: Remove unused properties
 [BUGFIX]  Apply rawurlencode only to file title. Thanks to Muhammad Zohaib. https://github.com/tpwd/ke_search/issues/146
 
 Version 4.6.3, 3 February 2023
